slider_style.css
/* div {
  border: 1px solid;
} */

#teho,#tuotto,#ala,#kwh,#kpl{
  font-weight: bold;
}

.grid-container {
  display: grid;
  grid-template-columns: auto auto;
  
}
@media screen and (max-width: 768px) {
  .grid-container {
      grid-template-columns: 1fr;
      grid-template-rows: 1fr;
   }
  }
/* lets do the radio buttons */
.radio__input 
  input {
    opacity: 0;
    width: 0;
    height: 0;
  }


.radio__control {
  position: relative;
  display: block;
  width: 0.8em;
  height: 0.8em;
  border-radius: 50%;
  border: 0.1em solid currentColor;
  margin-top: 3px;
  margin-bottom: 3px;
  bottom: 4px;
  margin-right: 3%;
}

.radio__input {
  display: flex;
}

.radio__control:hover{
  background-color: #e2e2e2;
  transition: 0.15s;
}


input:checked + .radio__control {
  box-shadow: 4px 4px 4px rgba(0, 0, 0, 0.2), 0 0 4px rgba(13, 13, 13, 0.2);
  background: #333333;
  border: 2px solid #eceff1;
  border-radius: 12px;
  box-sizing: border-box;
  cursor: default;
  height: 24px;
  width: 24px;
  -webkit-appearance: none;}

.radio__control {
  display: grid;
  place-items: center;
}

/* end radio */

/* position reset-nappi */
#nappi{
  position:relative;
  left: 25%;
  top: 25%;

}

#clear { 

  background-color: white;
  padding: 12px 41px 12px 41;
  border-radius: 5px;
  border: none;
  overflow: hidden;
  display: inline-block;
  vertical-align: middle;
  text-align: center;
  cursor: pointer;
  letter-spacing: 1px;
  min-width: 0;
  transition: all 0.15s ease-in-out;
  box-sizing: border-box;
  color: black!important;
}
#clear:hover{
  background-color: rgb(255, 202, 28);
}

.results {
  text-align: center;
  background-color: #000000;
  border-style: solid;
  border-width: 8px;
  border-radius: 27px;
  border-color: #000000;
  width: 100%;
  height: 60px;
  color: white;
  padding: 5%;
  padding-bottom: 14%;
  margin-top: 2%;
  margin-left: 2%;
}

[type=range] {
  -webkit-appearance: none;
  background: transparent;
  margin: 12px 0;
  width: 100%;
}
[type=range]::-moz-focus-outer {
  border: 0;
}
[type=range]:focus {
  outline: 0;
}
[type=range]:focus::-webkit-slider-runnable-track {
  background: #fbfbfc;
}
[type=range]:focus::-ms-fill-lower {
  background: #eceff1;
}
[type=range]:focus::-ms-fill-upper {
  background: #fbfbfc;
}
[type=range]::-webkit-slider-runnable-track {
  cursor: default;
  height: 8px;
  transition: all 0.2s ease;
  width: 100%;
  box-shadow: 1px 1px 1px rgba(0, 0, 0, 0.2), 0 0 1px rgba(13, 13, 13, 0.2);
  background: #eceff1;
  border: 2px solid #c4c4c4;
  border-radius: 5px;
}
[type=range]::-webkit-slider-thumb {
  box-shadow: 4px 4px 4px rgba(0, 0, 0, 0.2), 0 0 4px rgba(13, 13, 13, 0.2);
  background: #333333;
  border: 2px solid #eceff1;
  border-radius: 12px;
  box-sizing: border-box;
  cursor: default;
  height: 24px;
  width: 24px;
  -webkit-appearance: none;
  margin-top: -10px;
}
[type=range]::-moz-range-track {
  box-shadow: 1px 1px 1px rgba(0, 0, 0, 0.2), 0 0 1px rgba(13, 13, 13, 0.2);
  cursor: default;
  height: 8px;
  transition: all 0.2s ease;
  width: 100%;
  background: #eceff1;
  border: 2px solid #c4c4c4;
  border-radius: 5px;
  height: 4px;
}
[type=range]::-moz-range-thumb {
  box-shadow: 4px 4px 4px rgba(0, 0, 0, 0.2), 0 0 4px rgba(13, 13, 13, 0.2);
  background: #333333;
  border: 2px solid #eceff1;
  border-radius: 12px;
  box-sizing: border-box;
  cursor: default;
  height: 24px;
  width: 24px;
}
[type=range]::-ms-track {
  cursor: default;
  height: 8px;
  transition: all 0.2s ease;
  width: 100%;
  background: transparent;
  border-color: transparent;
  border-width: 12px 0;
  color: transparent;
}
[type=range]::-ms-fill-lower {
  box-shadow: 1px 1px 1px rgba(0, 0, 0, 0.2), 0 0 1px rgba(13, 13, 13, 0.2);
  background: #dde3e6;
  border: 2px solid #c4c4c4;
  border-radius: 10px;
}
[type=range]::-ms-fill-upper {
  box-shadow: 1px 1px 1px rgba(0, 0, 0, 0.2), 0 0 1px rgba(13, 13, 13, 0.2);
  background: #eceff1;
  border: 2px solid #c4c4c4;
  border-radius: 10px;
}
[type=range]::-ms-thumb {
  box-shadow: 4px 4px 4px rgba(0, 0, 0, 0.2), 0 0 4px rgba(13, 13, 13, 0.2);
  background: #333333;
  border: 2px solid #eceff1;
  border-radius: 12px;
  box-sizing: border-box;
  cursor: default;
  height: 24px;
  width: 24px;
  margin-top: 2px;
}

[type=range]::-ms-thumb:hover{
  transform: scale(1.1);
  transition: 0.3s;
}

[type=range]::-webkit-slider-thumb:hover{
  transform: scale(1.1);
  transition: 0.3s;
}

[type=range]::-moz-range-thumb:hover{
  transform: scale(1.1);
  transition: 0.3s;
}




[type=range]:disabled::-webkit-slider-thumb, [type=range]:disabled::-moz-range-thumb, [type=range]:disabled::-ms-thumb, [type=range]:disabled::-webkit-slider-runnable-track, [type=range]:disabled::-ms-fill-lower, [type=range]:disabled::-ms-fill-upper {
  cursor: not-allowed;
}

